# media-util-bot

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
database/: Cargo.toml
database/migrations/2026-04-13-193217-0000_llm_context/: down.sql  up.sql
database/src/: lib.rs  models.rs  schema.rs
src/: commands.rs  image_provider.rs  interact.rs  main.rs  process.rs  util.rs  yuri.rs
src/commands/: ai.rs  cake.rs  compress.rs  crush.rs  interact.rs  mask.rs  mod.rs  ping.rs  request.rs
