[package]
name = "media-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["builder", "interactions_endpoint", "rustls_backend", "model", "collector"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tiny_http = "0.12.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dotenvy = {  git = "https://github.com/allan2/dotenvy", features = [ "macros" ] }
image = "0.25.5"
