[package]
name = "media-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.4", features = ["builder", "interactions_endpoint", "rustls_backend", "model", "collector"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dotenvy = {  git = "https://github.com/allan2/dotenvy", features = [ "macros" ] }
image = "0.25.5"
num = "0.4.3"
chrono = "0.4.39"
include_dir = "0.7.4"
reqwest = { version = "0.12.23", features = [ "json" ] }
serde = "1.0.228"
serde_json = "1.0.145"
