[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
diesel = { version = "2.3.7", features = ["mysql", "r2d2", "chrono"] }
diesel_migrations = { version = "2.3.1", features = ["mysql"] }
dotenvy = "0.15.7"
openrouter-rs = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
